poprawki bug finder